--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               
               <div class="col-sm-6 col-md-5">
 
-                <h2 class="module-title font-alt align-center mt-80">Acme StandUp is a credit card sized, ultra-portable phone and tablet stand for Android and Apple devices.</h2>
+                <h2 class="module-title font-alt align-center mt-80 pt-140">Acme StandUp is a credit card sized, ultra-portable phone and tablet stand for Android and Apple devices.</h2>
                 
               </div>
             </div>
