--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <li class="work-item marketing webdesign " >
                 
                         <div class="video-box bg-dark" >
-                          <div class="video-box-icon " ><a class="video-pop-up" href="assets/images/Use.WebM">
+                          <div class="video-box-icon " ><a class="video-pop-up" href="assets/images/How2Use.m4v">
                             <span class="icon-video"></span></a>
                           </div>  
                           <div class="video-title font-alt">Video Demo</div>
