--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@
  -->
       
 
-        <section class="home-section home-full-height bg-dark-30" id="video" data-background="assets/images/Loop720.mp4">
-          <!-- <div align="center" class="embed-responsive embed-responsive-16by9">
+        <section class="home-section home-full-height bg-dark-30" id="video" >
+          <div align="center" class="embed-responsive embed-responsive-16by9">
               <video autoplay loop class="embed-responsive-item home-full-height">
                   <source src="assets/images/Loop720.mp4" type="video/mp4">
               </video>
-          </div> -->
+          </div>
         </section>
 
       <section class="module bg-dark" id="alt-features">
