--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     Favicons
     =============================================
     -->
-    <!-- <link rel="apple-touch-icon" sizes="57x57" href="assets/images/favicons/apple-icon-57x57.png">
+   <!--  <link rel="apple-touch-icon" sizes="57x57" href="assets/images/favicons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="assets/images/favicons/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="assets/images/favicons/apple-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="76x76" href="assets/images/favicons/apple-icon-76x76.png">
@@ -25,11 +25,11 @@
     <link rel="icon" type="image/png" sizes="192x192" href="assets/images/favicons/android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="assets/images/favicons/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png"> -->
     <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="assets/images/favicons/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff"> -->
+    <meta name="theme-color" content="#ffffff">
     <!--  
     Stylesheets
     =============================================
@@ -101,7 +101,7 @@
               <div class="col-sm-6 "><img src="assets/images/Photos/Travel.jpg" alt="">
               </div>
               
-              <div class=" col-sm-6 col-md-5  pt-140 pb-140 align-center" >
+              <div class=" col-sm-6 col-md-5 pt-3vw pb-3vw align-center" >
 
                 <h3 class="module-title font-alt  align-center pt-140 ">Acme StandUp is a credit card sized, ultra-portable phone and tablet stand for Android and Apple devices.</h3>
               </div>
@@ -130,11 +130,13 @@
 
         <section class="home-section home-full-height bg-dark-30" id="video" >
           <div align="center" class="embed-responsive embed-responsive-16by9">
-              <video autoplay loop class="embed-responsive-item home-full-height">
-                  <source src="assets/images/Loop720.mp4" type="video/mp4">
+              <video autoplay loop class="embed-responsive-item ">
+                  <source src="assets/images/Loop720.mp4" type="video/mp4" >
               </video>
           </div>
         </section>
+
+        
 
       <section class="module bg-dark" id="alt-features">
           <div class="container">
@@ -291,7 +293,7 @@
           <div class="container">
             <div class="row">
               <div class="col-sm-6">
-                <p class="copyright font-alt">&copy; 2017&nbsp;<a href="index.html">AcmeStandUp</a>, All Rights Reserved</p>
+                <p class="copyright font-alt">&copy; 2019&nbsp;<a href="index.html">AcmeStandUp</a>, All Rights Reserved</p>
               </div>
               <div class="col-sm-6">
                 <div class="footer-social-links"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-dribbble"></i></a><a href="#"><i class="fa fa-skype"></i></a>
