faster load times, removed rightscroll

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <div class="col-sm-6 "><img src="assets/images/Photos/Travel.jpg" alt="">
               </div>
               
-              <div class=" col-sm-6 col-md-5 pt-10vw pb-10vw align-center" >
+              <div class=" col-sm-6  pt-10vw pb-10vw align-center" >
 
                 <h3 class="module-title font-alt  align-center pt-140 ">Acme StandUp is a credit card sized, ultra-portable phone and tablet stand for Android and Apple devices.</h3>
               </div>
