defer and async for scripts

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="assets/images/favicons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png"> -->
-    <link rel="manifest" href="/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="assets/images/favicons/ms-icon-144x144.png">
+    <!-- <link rel="manifest" href="/manifest.json"> -->
+    <!-- <meta name="msapplication-TileColor" content="#ffffff"> -->
+    <!-- <meta name="msapplication-TileImage" content="assets/images/favicons/ms-icon-144x144.png"> -->
     <meta name="theme-color" content="#ffffff">
     <!--  
     Stylesheets
@@ -36,24 +36,24 @@
     
     -->
     <!-- Default stylesheets-->
-    <link href="assets/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" defer>
     <!-- Template specific stylesheets-->
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Volkhov:400i" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700" rel="stylesheet" defer>
+    <!-- <link href="https://fonts.googleapis.com/css?family=Volkhov:400i" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet" defer>
     <link href="assets/lib/animate.css/animate.css" rel="stylesheet">
-    <link href="assets/lib/components-font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="assets/lib/et-line-font/et-line-font.css" rel="stylesheet">
+    <link href="assets/lib/components-font-awesome/css/font-awesome.min.css" rel="stylesheet" defer>
+    <link href="assets/lib/et-line-font/et-line-font.css" rel="stylesheet" defer>
 <!--     <link href="assets/lib/et-line-font/MuseoSans_500.css" rel="stylesheet">
  -->   
-    <link href="assets/lib/flexslider/flexslider.css" rel="stylesheet">
-    <link href="assets/lib/owl.carousel/dist/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="assets/lib/owl.carousel/dist/assets/owl.theme.default.min.css" rel="stylesheet">
-    <link href="assets/lib/magnific-popup/dist/magnific-popup.css" rel="stylesheet">
-    <link href="assets/lib/simple-text-rotator/simpletextrotator.css" rel="stylesheet">
+    <link href="assets/lib/flexslider/flexslider.css" rel="stylesheet" defer>
+    <link href="assets/lib/owl.carousel/dist/assets/owl.carousel.min.css" rel="stylesheet" defer>
+    <link href="assets/lib/owl.carousel/dist/assets/owl.theme.default.min.css" rel="stylesheet" defer>
+    <link href="assets/lib/magnific-popup/dist/magnific-popup.css" rel="stylesheet" defer>
+    <!-- <link href="assets/lib/simple-text-rotator/simpletextrotator.css" rel="stylesheet"> -->
     <!-- Main stylesheet and color file-->
     <link href="assets/css/style.css" rel="stylesheet">
-    <link id="color-scheme" href="assets/css/colors/default.css" rel="stylesheet">
+    <link id="color-scheme" href="assets/css/colors/default.css" rel="stylesheet" defer>
   </head>
   <body data-spy="scroll" data-target=".onpage-navigation" data-offset="60">
     <main>
@@ -115,8 +115,8 @@
         <!-- <section class="video-section bg-dark-30 hidden-xs hidden-sm" id="video"  > -->
         <section class="video-section bg-dark-30 hidden-xs hidden-sm" id="video"  >
           <div align="align-center"  >
-              <video autoplay loop  muted class="embed-responsive-item">
-                  <source src="assets/images/Loop720.mp4" type="video/mp4"  media="all and (min-width: 720px)">
+              <video autoplay loop muted class="embed-responsive-item">
+                  <source src="assets/images/Loop720.mp4" type="video/mp4"  media="all and (min-width: 720px)" defer>
               </video>
               
           </div>
