--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="cache-control" content="Private" />
+    <meta http-equiv="Expires" content="3600" />
     <!--  
     Document Title
     =============================================
@@ -36,25 +38,62 @@
     
     -->
     <!-- Default stylesheets-->
-    <link href="assets/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" async>
+    <!-- <link href="assets/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"> -->
+    <link rel="preload" href="assets/lib/bootstrap/dist/css/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript><link href="assets/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"></noscript>
+
+
     <!-- Template specific stylesheets-->
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700" rel="stylesheet" defer>
+    <!-- <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700" rel="stylesheet" defer> -->
+    <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript><link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700" rel="stylesheet"> </noscript>
+
     <!-- <link href="https://fonts.googleapis.com/css?family=Volkhov:400i" rel="stylesheet"> -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet" async>
-    <link href="assets/lib/animate.css/animate.css" rel="stylesheet" defer>
-    <link href="assets/lib/components-font-awesome/css/font-awesome.min.css" rel="stylesheet" async>
-    <link href="assets/lib/et-line-font/et-line-font.css" rel="stylesheet" defer>
+    <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet" ></noscript>
+    <link rel="preload" href="assets/lib/animate.css/animate.css" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript>
+    <link href="assets/lib/animate.css/animate.css" rel="stylesheet" ></noscript>
+    <link rel="preload" href="assets/lib/components-font-awesome/css/font-awesome.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript>
+    <link href="assets/lib/components-font-awesome/css/font-awesome.min.css" rel="stylesheet" ></noscript>
+    <link rel="preload" href="assets/lib/et-line-font/et-line-font.css" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript>
+    <link href="assets/lib/et-line-font/et-line-font.css" rel="stylesheet" ></noscript>
 <!--     <link href="assets/lib/et-line-font/MuseoSans_500.css" rel="stylesheet">
  -->   
-    <link href="assets/lib/flexslider/flexslider.css" rel="stylesheet" defer>
-    <link href="assets/lib/owl.carousel/dist/assets/owl.carousel.min.css" rel="stylesheet" defer>
-    <link href="assets/lib/owl.carousel/dist/assets/owl.theme.default.min.css" rel="stylesheet" defer>
-    <link href="assets/lib/magnific-popup/dist/magnific-popup.css" rel="stylesheet" defer>
+ <link rel="preload" href="assets/lib/flexslider/flexslider.css" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript>
+    <link href="assets/lib/flexslider/flexslider.css" rel="stylesheet" ></noscript>
+    <link rel="preload" href="assets/lib/owl.carousel/dist/assets/owl.carousel.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript>
+    <link href="assets/lib/owl.carousel/dist/assets/owl.carousel.min.css" rel="stylesheet" ></noscript>
+    <link rel="preload" href="assets/lib/owl.carousel/dist/assets/owl.theme.default.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript>
+    <link href="assets/lib/owl.carousel/dist/assets/owl.theme.default.min.css" rel="stylesheet" ></noscript>
+    <link rel="preload" href="assets/lib/magnific-popup/dist/magnific-popup.css" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript>
+    <link href="assets/lib/magnific-popup/dist/magnific-popup.css" rel="stylesheet" ></noscript>
     <!-- <link href="assets/lib/simple-text-rotator/simpletextrotator.css" rel="stylesheet"> -->
     <!-- Main stylesheet and color file-->
-    <link href="assets/css/style.css" rel="stylesheet" async>
-    <link id="color-scheme" href="assets/css/colors/default.css" rel="stylesheet" defer>
+    <link rel="preload" href="assets/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript>
+    <link href="assets/css/style.css" rel="stylesheet" ></noscript>
+    <link rel="preload" href="assets/css/colors/default.css" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript>
+    <link id="color-scheme" href="assets/css/colors/default.css" rel="stylesheet" ></noscript>
+
+     <!--  
+    JavaScripts
+    =============================================
+    -->
+    <script src="assets/lib/jquery/dist/jquery.js" defer></script>
+    <script src="assets/lib/bootstrap/dist/js/bootstrap.min.js" defer></script>
+    <script src="assets/lib/wow/dist/wow.js" defer></script>
+    <!-- <script src="assets/lib/jquery.mb.ytplayer/dist/jquery.mb.YTPlayer.js"></script> -->
+    <script src="assets/lib/isotope/dist/isotope.pkgd.js" defer></script>
+    <script src="assets/lib/imagesloaded/imagesloaded.pkgd.js" defer></script>
+    <script src="assets/lib/flexslider/jquery.flexslider.js" defer></script>
+    <script src="assets/lib/owl.carousel/dist/owl.carousel.min.js" defer></script> 
+    <!-- <script src="assets/lib/smoothscroll.js"></script> -->
+    <script src="assets/lib/magnific-popup/dist/jquery.magnific-popup.js" defer></script>
+    <script src="assets/lib/simple-text-rotator/jquery.simple-text-rotator.min.js" defer></script>
+    <!-- <script async="" defer="" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDK2Axt8xiFYMBMDwwG1XzBQvEbYpzCvFU"></script> -->
+    <script src="assets/js/plugins.js" defer></script>
+    <script src="assets/js/main.js" defer></script>
+
   </head>
+
+
   <body data-spy="scroll" data-target=".onpage-navigation" data-offset="60">
     <main>
       <div class="page-loader">
@@ -311,23 +350,6 @@
       <div class="scroll-up"><a href="#totop"><i class="fa fa-angle-double-up"></i></a></div>
       <!-- <script async="" defer="" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDK2Axt8xiFYMBMDwwG1XzBQvEbYpzCvFU"></script>  -->
     </main>
-    <!--  
-    JavaScripts
-    =============================================
-    -->
-    <script src="assets/lib/jquery/dist/jquery.js"></script>
-    <script src="assets/lib/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="assets/lib/wow/dist/wow.js"></script>
-    <script src="assets/lib/jquery.mb.ytplayer/dist/jquery.mb.YTPlayer.js"></script>
-    <script src="assets/lib/isotope/dist/isotope.pkgd.js"></script>
-    <script src="assets/lib/imagesloaded/imagesloaded.pkgd.js"></script>
-    <script src="assets/lib/flexslider/jquery.flexslider.js"></script>
-    <script src="assets/lib/owl.carousel/dist/owl.carousel.min.js"></script> 
-    <!-- <script src="assets/lib/smoothscroll.js"></script> -->
-    <script src="assets/lib/magnific-popup/dist/jquery.magnific-popup.js"></script>
-    <script src="assets/lib/simple-text-rotator/jquery.simple-text-rotator.min.js"></script>
-    <!-- <script async="" defer="" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDK2Axt8xiFYMBMDwwG1XzBQvEbYpzCvFU"></script> -->
-    <script src="assets/js/plugins.js"></script>
-    <script src="assets/js/main.js"></script>
+   
   </body>
 </html>
