--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
       
         <!-- <section class="video-section bg-dark-30 hidden-xs hidden-sm" id="video"  > -->
         <section class="video-section bg-dark-30 " id="video"  >
-          <div align="align-center"  >
-              <video autoplay loop muted class="embed-responsive-item" >
+            <div align="align-center" width=50% margin:0 auto;  >
+              <video autoplay loop muted class="embed-responsive-item" height=100% width=100% >
 
                   <source src="assets/images/Loop720.mp4" type="video/mp4"  media="all and (min-width: 720px)" async >
               </video>
