--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     -->
     <!-- Default stylesheets-->
     <!-- <link href="assets/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"> -->
-    <link rel="preload" href="assets/lib/bootstrap/dist/css/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript><link href="assets/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"></noscript>
+    <link rel="preload" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript><link href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"></noscript>
 
 
     <!-- Template specific stylesheets-->
@@ -49,22 +49,22 @@
     <!-- <link href="https://fonts.googleapis.com/css?family=Volkhov:400i" rel="stylesheet"> -->
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet" ></noscript>
-    <link rel="preload" href="assets/lib/animate.css/animate.css" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript>
-    <link href="assets/lib/animate.css/animate.css" rel="stylesheet" ></noscript>
-    <link rel="preload" href="assets/lib/components-font-awesome/css/font-awesome.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript>
-    <link href="assets/lib/components-font-awesome/css/font-awesome.min.css" rel="stylesheet" ></noscript>
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" rel="stylesheet" ></noscript>
+    <link rel="preload" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript>
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" ></noscript>
     <link rel="preload" href="assets/lib/et-line-font/et-line-font.css" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript>
     <link href="assets/lib/et-line-font/et-line-font.css" rel="stylesheet" ></noscript>
 <!--     <link href="assets/lib/et-line-font/MuseoSans_500.css" rel="stylesheet">
  -->   
- <link rel="preload" href="assets/lib/flexslider/flexslider.css" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript>
-    <link href="assets/lib/flexslider/flexslider.css" rel="stylesheet" ></noscript>
-    <link rel="preload" href="assets/lib/owl.carousel/dist/assets/owl.carousel.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript>
-    <link href="assets/lib/owl.carousel/dist/assets/owl.carousel.min.css" rel="stylesheet" ></noscript>
-    <link rel="preload" href="assets/lib/owl.carousel/dist/assets/owl.theme.default.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript>
-    <link href="assets/lib/owl.carousel/dist/assets/owl.theme.default.min.css" rel="stylesheet" ></noscript>
-    <link rel="preload" href="assets/lib/magnific-popup/dist/magnific-popup.css" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript>
-    <link href="assets/lib/magnific-popup/dist/magnific-popup.css" rel="stylesheet" ></noscript>
+ <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.7.2/flexslider.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.7.2/flexslider.min.css" rel="stylesheet" ></noscript>
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css" rel="stylesheet" ></noscript>
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.theme.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.theme.min.css" rel="stylesheet" ></noscript>
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet" ></noscript>
     <!-- <link href="assets/lib/simple-text-rotator/simpletextrotator.css" rel="stylesheet"> -->
     <!-- Main stylesheet and color file-->
     <link rel="preload" href="assets/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'"><noscript>
@@ -76,9 +76,12 @@
     JavaScripts
     =============================================
     -->
-    <script src="assets/lib/jquery/dist/jquery.js" defer></script>
-    <script src="assets/lib/bootstrap/dist/js/bootstrap.min.js" defer></script>
-    <script src="assets/lib/wow/dist/wow.js" defer></script>
+     <script src="https://code.jquery.com/jquery-3.4.1.min.js" defer></script>
+    <!-- <script src="assets/lib/bootstrap/dist/js/bootstrap.min.js" defer></script> -->
+    <!-- <script src="assets/lib/wow/dist/wow.js" defer></script> -->
+    <!-- <script src=https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js" defer></script> -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" defer></script>
     <!-- <script src="assets/lib/jquery.mb.ytplayer/dist/jquery.mb.YTPlayer.js"></script> -->
     <script src="assets/lib/isotope/dist/isotope.pkgd.js" defer></script>
     <script src="assets/lib/imagesloaded/imagesloaded.pkgd.js" defer></script>
